<!--
  ~ Copyright 2021-2022 Bandyer @ https://www.bandyer.com
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~           http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>
    <string name="app_name">Demo SDK Design</string>
    <string name="kaleyra" translatable="false">Kaleyra</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="whiteboard_editor">Whiteboard text editor</string>
    <string name="snapshot_preview">Snapshot preview</string>
    <string name="whiteboard">Whiteboard</string>
    <string name="ringing">Call Ringing</string>
    <string name="bluetooth_audio_route">Bluetooth device states</string>
    <string name="live_pointer">Live pointer</string>
    <string name="night_mode">Night mode on/off</string>
    <string name="bandyer_start_audio_call">Call</string>
    <string name="bandyer_start_video_call">Video call</string>
    <string name="bandyer_start_audio_upgrade_call">Call</string>
    <string name="bandyer_start_audio_call_description">Start call</string>
    <string name="bandyer_start_video_call_description">Start video call</string>
    <string name="bandyer_start_audio_upgrade_call_description">Start audio upgradable call</string>
    <string name="smart_glass_menu">Smartglass menu</string>
    <string name="screen_share_picker">Screen share picker</string>
    <string name="file_share">File share</string>
    <string name="feedback">Feedback</string>
    <string name="add_upload">Add upload</string>
    <string name="add_download">Add download</string>
    <string name="add_download_available">Add download available</string>
    <string name="file_share_dialog">File Share Dialog</string>
</resources>