<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2022 Kaleyra @ https://www.kaleyra.com
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/kaleyra_dimen_space32"
            android:paddingBottom="@dimen/kaleyra_dimen_space32">

            <com.kaleyra.collaboration_suite_glass_ui.common.HorizontalAutoScrollView
                android:id="@+id/kaleyra_horizontalAutoScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:text="Stefano Brusadelli, Andrea Giuliacci, Mario Draghi, Krystian Petrov, Mara Maionchi, Elisa Codara"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:paddingStart="@dimen/kaleyra_dimen_space32"
                    android:paddingEnd="@dimen/kaleyra_dimen_space32"
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </com.kaleyra.collaboration_suite_glass_ui.common.HorizontalAutoScrollView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_kaleyra_snackbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/kaleyra_dimen_space16"
                android:layout_marginLeft="@dimen/kaleyra_dimen_space16"
                android:layout_marginTop="@dimen/kaleyra_dimen_space16"
                android:layout_marginEnd="@dimen/kaleyra_dimen_space16"
                android:layout_marginRight="@dimen/kaleyra_dimen_space16"
                android:text="@string/kaleyra_snackbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/kaleyra_horizontalAutoScrollView"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_switch_night_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/kaleyra_dimen_space16"
                android:layout_marginLeft="@dimen/kaleyra_dimen_space16"
                android:layout_marginTop="@dimen/kaleyra_dimen_space16"
                android:layout_marginEnd="@dimen/kaleyra_dimen_space16"
                android:layout_marginRight="@dimen/kaleyra_dimen_space16"
                android:text="@string/night_mode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_kaleyra_snackbar" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_chat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/kaleyra_dimen_space16"
                android:layout_marginLeft="@dimen/kaleyra_dimen_space16"
                android:layout_marginTop="@dimen/kaleyra_dimen_space16"
                android:layout_marginEnd="@dimen/kaleyra_dimen_space16"
                android:layout_marginRight="@dimen/kaleyra_dimen_space16"
                android:text="@string/chat"
                app:layout_constraintEnd_toStartOf="@id/btn_call"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/btn_call"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_switch_night_mode" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_call"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/kaleyra_dimen_space16"
                android:layout_marginLeft="@dimen/kaleyra_dimen_space16"
                android:layout_marginEnd="@dimen/kaleyra_dimen_space16"
                android:layout_marginRight="@dimen/kaleyra_dimen_space16"
                android:text="@string/call"
                app:layout_constraintBottom_toBottomOf="@id/btn_chat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/btn_chat"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_chat"
                app:layout_constraintTop_toTopOf="@id/btn_chat" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_smartglasses_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/kaleyra_dimen_space16"
                android:layout_marginLeft="@dimen/kaleyra_dimen_space16"
                android:layout_marginTop="@dimen/kaleyra_dimen_space16"
                android:layout_marginEnd="@dimen/kaleyra_dimen_space16"
                android:layout_marginRight="@dimen/kaleyra_dimen_space16"
                android:text="@string/smart_glass_menu"
                app:layout_constraintTop_toBottomOf="@id/btn_chat" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_whiteboard_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/kaleyra_dimen_space16"
                android:layout_marginLeft="@dimen/kaleyra_dimen_space16"
                android:layout_marginTop="@dimen/kaleyra_dimen_space16"
                android:layout_marginEnd="@dimen/kaleyra_dimen_space16"
                android:layout_marginRight="@dimen/kaleyra_dimen_space16"
                android:text="@string/whiteboard_editor"
                app:layout_constraintTop_toBottomOf="@id/btn_smartglasses_menu" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_live_pointer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/kaleyra_dimen_space16"
                android:layout_marginLeft="@dimen/kaleyra_dimen_space16"
                android:layout_marginTop="@dimen/kaleyra_dimen_space16"
                android:layout_marginEnd="@dimen/kaleyra_dimen_space16"
                android:layout_marginRight="@dimen/kaleyra_dimen_space16"
                android:text="@string/live_pointer"
                app:layout_constraintTop_toBottomOf="@id/btn_whiteboard_editor" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_bluetooth_audioroute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/kaleyra_dimen_space16"
                android:layout_marginLeft="@dimen/kaleyra_dimen_space16"
                android:layout_marginTop="@dimen/kaleyra_dimen_space16"
                android:layout_marginEnd="@dimen/kaleyra_dimen_space16"
                android:layout_marginRight="@dimen/kaleyra_dimen_space16"
                android:text="@string/bluetooth_audio_route"
                app:layout_constraintTop_toBottomOf="@id/btn_live_pointer" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_whiteboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/kaleyra_dimen_space16"
                android:layout_marginLeft="@dimen/kaleyra_dimen_space16"
                android:layout_marginTop="@dimen/kaleyra_dimen_space16"
                android:layout_marginEnd="@dimen/kaleyra_dimen_space16"
                android:layout_marginRight="@dimen/kaleyra_dimen_space16"
                android:text="@string/whiteboard"
                app:layout_constraintTop_toBottomOf="@id/btn_bluetooth_audioroute" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ringing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/kaleyra_dimen_space16"
                android:layout_marginLeft="@dimen/kaleyra_dimen_space16"
                android:layout_marginTop="@dimen/kaleyra_dimen_space16"
                android:layout_marginBottom="@dimen/kaleyra_dimen_space16"
                android:layout_marginEnd="@dimen/kaleyra_dimen_space16"
                android:layout_marginRight="@dimen/kaleyra_dimen_space16"
                android:text="@string/ringing"
                app:layout_constraintTop_toBottomOf="@id/btn_whiteboard" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_file_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/kaleyra_dimen_space16"
                android:layout_marginLeft="@dimen/kaleyra_dimen_space16"
                android:layout_marginTop="@dimen/kaleyra_dimen_space16"
                android:layout_marginBottom="@dimen/kaleyra_dimen_space16"
                android:layout_marginEnd="@dimen/kaleyra_dimen_space16"
                android:layout_marginRight="@dimen/kaleyra_dimen_space16"
                android:text="@string/file_share"
                app:layout_constraintTop_toBottomOf="@id/btn_ringing" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/kaleyra_dimen_space16"
                android:layout_marginLeft="@dimen/kaleyra_dimen_space16"
                android:layout_marginTop="@dimen/kaleyra_dimen_space16"
                android:layout_marginBottom="@dimen/kaleyra_dimen_space16"
                android:layout_marginEnd="@dimen/kaleyra_dimen_space16"
                android:layout_marginRight="@dimen/kaleyra_dimen_space16"
                android:text="@string/feedback"
                app:layout_constraintTop_toBottomOf="@id/btn_file_share" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
